# mmdlp_qt

./: CMakeLists.txt  CMakeUserPresets.json  README.md  config.yaml  main.cpp
hardware/: CameraManager.cpp  CameraManager.h  ConfigManager.cpp  ConfigManager.h  ControlThread.cpp  ControlThread.h  InnfosMotor.cpp  InnfosMotor.h  MotorManager.cpp  MotorManager.h  MotorMonitorThread.cpp  MotorMonitorThread.h  PrintThread.cpp  PrintThread.h  ProjectorManager.cpp  ProjectorManager.h  SerialSender.cpp  SerialSender.h
hardware/projector_api/include/: LibUSB3DPrinter-x64.h
hardware/projector_api/lib/: LibUSB3DPrinter-x64.lib
interface/: SwitchButton.cpp  SwitchButton.h  control_tab.cpp  control_tab.h  control_tab.ui  mmdlp_gui.cpp  mmdlp_gui.h  mmdlp_gui.ui  print_tab.cpp  print_tab.h  print_tab.ui  projector_gui.cpp  projector_gui.h  projector_gui.ui
